Fixed vertical alignment of icons on buttons

--- a/scss/_buttons.scss
+++ b/scss/_buttons.scss
@@ -20,6 +20,7 @@
     margin-right: .5em;
     font-size: 2em;
     line-height: .5;
+    margin-top: .1em;
   }
 }
 .btn-primary {
